--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-ga": "^3.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "sass": "^1.52.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
