--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "sass": "^1.52.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webtorrent": "^1.8.32"
   },
   "scripts": {
     "start": "react-scripts start",
